# CementEngine

./: .gitignore  CMakeLists.txt  CREDITS.md  Dockerfile  LICENSE.txt  Makefile  README.md  main.cpp  tests.cpp
.github/workflows/: cmake.yml
App/: MyApp.cpp  MyApp.hpp  main.cpp
App/prefabs/: TestObject.cpp  TestObject.hpp
App/scenes/: PhysicsTestScene.cpp  PhysicsTestScene.hpp
Box2D-CMake/: CMakeLists.txt
Box2D-CMake/box2d/src/dynamics/: b2_world.cpp
Core/: Application.cpp  Application.hpp  Components.hpp  globals.cpp  globals.hpp
Core/ComponentSystem/: ComponentArray.hpp  ComponentSystem.hpp  Components.hpp  EntityManager.cpp  EntityManager.hpp
Core/EntityComponentSystem/: ComponentArray.hpp  ComponentManager.hpp  ComponentSystem.hpp  Entity.cpp  Entity.hpp  Entity.tpp  EntityComponenSystem.cpp  EntityComponenSystem.hpp  EntityComponentSystem.hpp  EntityManager.cpp  EntityManager.hpp  SystemManager.hpp
Core/EntitySystems/: IEntitySystem.hpp  MovementSystem.cpp  MovementSystem.hpp  System.cpp  System.hpp
Core/EventSystem/: BaseEvent.hpp  Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventManager.hpp  EventManager.tpp  EventSystem.hpp
Core/Events/: Event.cpp  Event.hpp  EventDispatcher.hpp  EventDispatcher.tpp
Core/Math/: Math.cpp  Math.hpp  Vector2f.cpp  Vector2f.hpp
Core/NEntityComponentSystem/: ComponentArray.hpp  ComponentManager.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  EntityManager.cpp  EntityManager.hpp  IEntitySystem.hpp  SystemManager.cpp  SystemManager.hpp
Core/Physics/: Box2DDebugDraw.cpp  Box2DDebugDraw.hpp  CircleRigidBody.cpp  CircleRigidBody.hpp  Conversions.cpp  Conversions.hpp  RigidBody.cpp  RigidBody.hpp  Shape.hpp  Vector2f.cpp  Vector2f.hpp
Core/SceneSystem/: BaseScene.cpp  BaseScene.hpp  Scene.cpp  Scene.hpp  Scene.tpp  SceneManager.cpp  SceneManager.hpp  SceneManager.tpp  SceneStateManager.cpp  SceneStateManager.hpp  SceneSystem.hpp
Core/Scenes/: Scene.cpp  Scene.hpp  Scene.tpp  SceneManager.cpp  SceneManager.hpp  SceneManager.tpp
Core/UUID/: UUID.cpp  UUID.hpp
Editor/: main.cpp
docs/: TODO.md
docs/Core/EntityComponentSystem/: ECS.md
docs/Core/EventSystem/: DerivedEvents.md  EventDispatcher.md
docs/System/Events/: BaseEvent.md  DerivedEvents.md
test/: TestEntityComponentSystem.cpp  TestEventSystem.cpp  TestEventSystem.hpp  TestSceneSystem.cpp  TestSceneSystem.hpp
test/framework/: UnitTest.cpp  UnitTest.hpp  color.hpp
